test/samples/valid/never_terminator.maruir
fun foo(a: u256): never 
{
entry:
	abort;
}

fun boo(): never {
	entry:
		call foo(0_u256);
}
