test/samples/invalid/resolving/tv_with_margs.maruir
fun foo<M;T>(arg: T<M;>) {
}
